Fix: chart out of bounds - style

--- a/src/sections/CoinProfile/CoinProfile.scss
+++ b/src/sections/CoinProfile/CoinProfile.scss
@@ -92,7 +92,7 @@
 
 .price-chart {
 	padding: 3rem 1rem;
-	min-width: 97%;
+	min-width: 96%;
 	max-width: 1200px;
 	margin: 0 auto;
 	min-height: 300px;
@@ -106,7 +106,7 @@
 	}
 
 	#line-chart {
-		width: 100% !important;
-		height: 100% !important;
+		width: 96% !important;
+		height: 96% !important;
 	}
 }
